--- a/public/rewards.html
+++ b/public/rewards.html
@@ -6,65 +6,62 @@
     <title>Rewards - AnTel</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        .reward-card {
-            display: flex;
-            align-items: center;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 15px;
-            margin-bottom: 15px;
-            background-color: #f9f9f9;
-        }
-        .reward-icon {
-            font-size: 2em;
-            color: goldenrod;
-            margin-right: 15px;
-        }
-        #noRewardsMessage {
-            text-align: center;
-            font-style: italic;
-            color: #888;
-        }
-    </style>
 </head>
-<body>
-    <div class="dashboard-container">
-        <aside class="dashboard-sidebar">
-            <div class="sidebar-logo"><div class="logo-placeholder">AnTel</div></div>
-            <div class="user-profile-summary">
-                <div class="profile-avatar">P</div>
-                <div class="profile-info">
-                    <span id="sidebarUserName"></span>
-                    <span id="sidebarUserMobile"></span>
-                    <span class="user-status">Prepaid</span>
+<body style="font-family: Arial, sans-serif; margin: 0; background-color: #f9f9f9; color: #333;">
+    <div class="dashboard-container" style="display: flex; min-height: 100vh;">
+        <aside class="dashboard-sidebar" style="width: 280px; background-color: #fff; padding: 1.5rem; box-shadow: 2px 0 5px rgba(0,0,0,0.1); display: flex; flex-direction: column;">
+            <div class="sidebar-logo"><div class="logo-placeholder" style="font-weight: 900; font-size: 1.5rem; color: #FF7B00; margin-bottom: 2rem; display: block;">AnTel</div></div>
+            <div class="user-profile-summary" style="display: flex; flex-direction: column; margin-bottom: 2rem; position: relative; padding-bottom: 1rem; border-bottom: 1px solid #F5F5F5;">
+                <div class="profile-info-block" style="display: flex; align-items: center; margin-bottom: 1rem;">
+                    <div class="profile-avatar" style="width: 50px; height: 50px; background-color: #E20074; color: #fff; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; font-weight: bold;">P</div>
+                    <div class="profile-details" style="display: flex; flex-direction: column; margin-left: 1rem;">
+                        <span id="sidebarUserName" style="font-weight: bold; font-size: 0.9em;">Rahul</span>
+                        <span id="sidebarUserMobile" style="font-size: 0.9em;">1234567890</span>
+                        <span class="user-status" style="background-color: #e0f7fa; color: #00796b; font-size: 0.8rem; padding: 0.2rem 0.5rem; border-radius: 10px; margin-top: 0.5rem;">Prepaid</span>
+                    </div>
                 </div>
-                <a href="#" class="add-profile-button button-link">add profile</a>
-                <div class="settings-icon button-link"><i class="fas fa-cog"></i></div>
+                <div class="profile-actions" style="display: flex; justify-content: space-between; align-items: center;">
+                    <a href="#" class="add-profile-button small-button" style="background-color: #F5F5F5; color: #333; padding: 0.5rem 1rem; border-radius: 5px; font-size: 0.8rem; text-decoration: none;">add profile</a>
+                    <div class="settings-icon" style="font-size: 1.2rem; color: #999; cursor: pointer;"><i class="fas fa-cog"></i></div>
+                </div>
             </div>
-            <ul class="sidebar-menu">
-                <li><a href="/dashboard.html" class="button-link"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="/my_account.html" class="button-link"><i class="fas fa-user-circle"></i> My Account</a></li>
-                <li><a href="/recharge_history.html" class="button-link"><i class="fas fa-history"></i> Recharge History</a></li>
-                <li><a href="/active_plans.html" class="button-link"><i class="fas fa-box-open"></i> Active Plans</a></li>
-                <li><a href="/bill_payments.html" class="button-link"><i class="fas fa-file-invoice-dollar"></i> Bill Payments</a></li>
-                <li><a href="/support.html" class="button-link"><i class="fas fa-headset"></i> Support</a></li>
-                <li><a href="/rewards.html" class="button-link active"><i class="fas fa-gift"></i> Rewards</a></li>
-                <li><a href="/my_devices.html" class="button-link"><i class="fas fa-mobile-alt"></i> My Devices</a></li>
-                <li><a href="/settings.html" class="button-link"><i class="fas fa-cog"></i> Settings</a></li>
-                <li><a href="#" id="logoutButton" class="button-link"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+            <ul class="sidebar-menu" style="list-style: none; padding: 0; margin: 0; background-color: #f5f5f5; border-radius: 10px; padding: 10px; box-shadow: inset 0 0 5px rgba(0,0,0,0.05);">
+                <li style="margin-bottom: 0.5rem;"><a href="/dashboard.html" class="button-link" style="display: flex; align-items: center; padding: 0.8rem 1rem; border-radius: 5px; color: #333; font-weight: 600; text-decoration: none;"><i class="fas fa-home" style="margin-right: 1rem; width: 20px; text-align: center;"></i> Home</a></li>
+                <li style="margin-bottom: 0.5rem;"><a href="/my_account.html" class="button-link" style="display: flex; align-items: center; padding: 0.8rem 1rem; border-radius: 5px; color: #333; font-weight: 600; text-decoration: none;"><i class="fas fa-user-circle" style="margin-right: 1rem; width: 20px; text-align: center;"></i> My Account</a></li>
+                <li style="margin-bottom: 0.5rem;"><a href="/recharge_history.html" class="button-link" style="display: flex; align-items: center; padding: 0.8rem 1rem; border-radius: 5px; color: #333; font-weight: 600; text-decoration: none;"><i class="fas fa-history" style="margin-right: 1rem; width: 20px; text-align: center;"></i> Recharge History</a></li>
+                <li style="margin-bottom: 0.5rem;"><a href="/active_plans.html" class="button-link" style="display: flex; align-items: center; padding: 0.8rem 1rem; border-radius: 5px; color: #333; font-weight: 600; text-decoration: none;"><i class="fas fa-box-open" style="margin-right: 1rem; width: 20px; text-align: center;"></i> Active Plans</a></li>
+                <li style="margin-bottom: 0.5rem;"><a href="/bill_payments.html" class="button-link" style="display: flex; align-items: center; padding: 0.8rem 1rem; border-radius: 5px; color: #333; font-weight: 600; text-decoration: none;"><i class="fas fa-file-invoice-dollar" style="margin-right: 1rem; width: 20px; text-align: center;"></i> Bill Payments</a></li>
+                <li style="margin-bottom: 0.5rem;"><a href="/support.html" class="button-link" style="display: flex; align-items: center; padding: 0.8rem 1rem; border-radius: 5px; color: #333; font-weight: 600; text-decoration: none;"><i class="fas fa-headset" style="margin-right: 1rem; width: 20px; text-align: center;"></i> Support</a></li>
+                <li style="margin-bottom: 0.5rem;"><a href="/rewards.html" class="button-link active" style="display: flex; align-items: center; padding: 0.8rem 1rem; border-radius: 5px; color: #fff; font-weight: 600; text-decoration: none; background-color: #E20074;"><i class="fas fa-gift" style="margin-right: 1rem; width: 20px; text-align: center;"></i> Rewards</a></li>
+                <li style="margin-bottom: 0.5rem;"><a href="/my_devices.html" class="button-link" style="display: flex; align-items: center; padding: 0.8rem 1rem; border-radius: 5px; color: #333; font-weight: 600; text-decoration: none;"><i class="fas fa-mobile-alt" style="margin-right: 1rem; width: 20px; text-align: center;"></i> My Devices</a></li>
+                <li style="margin-bottom: 0.5rem;"><a href="/settings.html" class="button-link" style="display: flex; align-items: center; padding: 0.8rem 1rem; border-radius: 5px; color: #333; font-weight: 600; text-decoration: none;"><i class="fas fa-cog" style="margin-right: 1rem; width: 20px; text-align: center;"></i> Settings</a></li>
+                <li style="margin-bottom: 0.5rem;"><a href="#" id="logoutButton" class="button-link" style="display: flex; align-items: center; padding: 0.8rem 1rem; border-radius: 5px; color: #333; font-weight: 600; text-decoration: none;"><i class="fas fa-sign-out-alt" style="margin-right: 1rem; width: 20px; text-align: center;"></i> Logout</a></li>
             </ul>
         </aside>
 
-        <main class="dashboard-content">
-            <div class="dashboard-top-nav">
-                <h2>Rewards</h2>
+        <main class="dashboard-content" style="flex-grow: 1; padding: 2rem;">
+            <div class="dashboard-top-nav" style="display: flex; justify-content: flex-end; align-items: center; margin-bottom: 2rem; gap: 1rem;">
+                <h2 style="margin-right: auto; color: #333; font-size: 1.8rem; font-weight: bold;">Rewards</h2>
             </div>
             <section class="page-content">
-                <div class="widget">
-                    <h3>Your Vouchers & Rewards</h3>
+                <div class="widget" style="background-color: #fff; padding: 20px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); margin-bottom: 20px;">
+                    <h3 style="border-bottom: 2px solid #FF7B00; padding-bottom: 10px; margin-top: 0; margin-bottom: 20px;">Your Vouchers & Rewards</h3>
                     <div id="rewardsContainer">
-                        <p id="noRewardsMessage" style="display: none;">You have no active rewards.</p>
+                        <div class="reward-card" style="display: flex; align-items: center; border: 1px solid #ddd; border-radius: 8px; padding: 15px; margin-bottom: 15px; background-color: #f9f9f9;">
+                            <div class="reward-icon" style="font-size: 2em; color: goldenrod; margin-right: 15px;"><i class="fas fa-gift"></i></div>
+                            <div>
+                                <p style="margin: 0; font-weight: bold;">Get ₹50 Off on your next recharge</p>
+                                <p style="margin: 5px 0 0; font-size: 0.9em; color: #666;">Valid till: 31 Aug, 2025</p>
+                            </div>
+                        </div>
+                        <div class="reward-card" style="display: flex; align-items: center; border: 1px solid #ddd; border-radius: 8px; padding: 15px; margin-bottom: 15px; background-color: #f9f9f9;">
+                            <div class="reward-icon" style="font-size: 2em; color: goldenrod; margin-right: 15px;"><i class="fas fa-ticket-alt"></i></div>
+                            <div>
+                                <p style="margin: 0; font-weight: bold;">20% off on Movie Tickets</p>
+                                <p style="margin: 5px 0 0; font-size: 0.9em; color: #666;">Code: ANTELMOVIES20</p>
+                            </div>
+                        </div>
+                        <p id="noRewardsMessage" style="text-align: center; font-style: italic; color: #888; display: none;">You have no active rewards.</p>
                     </div>
                 </div>
             </section>
