New changes commit of Antel webapp project

--- a/public/index.html
+++ b/public/index.html
@@ -134,6 +134,21 @@
             line-height: 1.2;
         }
 
+        /* Advertisement Banner Style */
+        .ad-banner {
+            padding: 2rem 0;
+            height: 30vh;
+        }
+
+        .ad-banner img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 15px;
+            box-shadow: var(--box-shadow-light);
+            display: block;
+        }
+
         /* Quick Recharge Section */
         .quick-recharge-section {
             background-color: var(--antel-white);
@@ -490,6 +505,12 @@
                         <a href="#"><i class="fas fa-id-card"></i>E-KYC</a>
                     </div>
                 </div>
+            </div>
+        </section>
+        
+        <section class="ad-banner">
+            <div class="container">
+                <img src="images/advertisement.png" alt="AnTel Advertisement" />
             </div>
         </section>
 
