--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -155,6 +155,39 @@
             text-align: center;
         }
 
+        /* New Sidebar Promos */
+        .sidebar-promos {
+            margin-top: auto; 
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
+            padding-top: 1.5rem;
+            border-top: 1px solid var(--antel-light-gray);
+            flex-grow: 1; 
+            justify-content: space-between; 
+        }
+
+        .sidebar-promos a {
+            display: flex; 
+            flex-grow: 1;
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: var(--box-shadow-light);
+            transition: transform var(--transition-speed);
+        }
+
+        .sidebar-promos a:hover {
+            transform: translateY(-5px);
+        }
+
+        .sidebar-promos img {
+            width: 100%;
+            height: 100%; 
+            object-fit: cover; 
+            display: block;
+            border-radius: 15px;
+        }
+
         .dashboard-content {
             flex-grow: 1;
             padding: 2.5rem;
@@ -559,6 +592,10 @@
                 <li><a href="/my_devices.html" class="button-link"><i class="fas fa-mobile-alt"></i> My Devices</a></li>
                 <li><a href="#" id="logoutButton" class="button-link"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
             </ul>
+            <div class="sidebar-promos">
+                <a href="#"><img src="images/promo1.png" alt="Promotional Offer 1" class="sidebar-promo-img"></a>
+                <a href="#"><img src="images/promo2.png" alt="Promotional Offer 2" class="sidebar-promo-img"></a>
+            </div>
         </aside>
         
         <main class="dashboard-content">
