Updated color scheme to blue and white

--- a/public/active_plans.html
+++ b/public/active_plans.html
@@ -12,9 +12,8 @@
     <style>
         /* AnTel Color Palette & Global Styles */
         :root {
-            --antel-orange: #FF8F00;
-            --antel-pink: #E20074;
-            --antel-turquoise: #00796B;
+            --antel-primary-blue: #6b91bc;
+            --antel-primary-blue-dark: #58799f;
             --antel-white: #FAFAFA;
             --antel-text-dark: #333;
             --antel-light-gray: #f5f5f5;
@@ -52,7 +51,7 @@
         .logo-placeholder {
             font-weight: 700;
             font-size: 1.8rem;
-            color: var(--antel-orange);
+            color: var(--antel-primary-blue);
             margin-bottom: 2.5rem;
             display: block;
         }
@@ -72,7 +71,7 @@
         .profile-avatar {
             width: 50px;
             height: 50px;
-            background-color: var(--antel-pink);
+            background-color: var(--antel-primary-blue);
             color: var(--antel-white);
             border-radius: 50%;
             display: flex;
@@ -135,7 +134,7 @@
 
         .button-link:hover {
             background-color: rgba(0, 121, 107, 0.1);
-            color: var(--antel-turquoise);
+            color: var(--antel-light-blue-text);
         }
 
         .button-link i {
@@ -146,13 +145,13 @@
 
         .button-link.active {
             color: var(--antel-white);
-            background-color: var(--antel-pink);
-            box-shadow: 0 4px 10px rgba(226, 0, 116, 0.2);
+            background-color: var(--antel-primary-blue);
+            box-shadow: 0 4px 10px rgba(107, 145, 188, 0.2);
         }
 
         .button-link.active:hover {
             color: var(--antel-white);
-            background-color: var(--antel-pink);
+            background-color: var(--antel-primary-blue-dark);
         }
 
         .dashboard-content {
@@ -216,7 +215,7 @@
             margin: 0;
             font-size: 1.5rem;
             font-weight: 600;
-            color: var(--antel-pink);
+            color: var(--antel-primary-blue);
         }
 
         .plan-card-header .status {
@@ -243,7 +242,7 @@
         
         .detail-item i {
             font-size: 1.5rem;
-            color: var(--antel-orange);
+            color: var(--antel-primary-blue);
         }
 
         .detail-item .label {
@@ -269,7 +268,7 @@
 
         .progress-bar-fill {
             height: 100%;
-            background-color: var(--antel-orange);
+            background-color: var(--antel-primary-blue);
             border-radius: 5px;
             transition: width var(--transition-speed) ease-in-out;
             width: 73%; /* Dynamic value from your app.js */
@@ -288,16 +287,16 @@
             font-weight: 600;
             cursor: pointer;
             text-decoration: none;
-            background-color: var(--antel-pink);
+            background-color: var(--antel-primary-blue);
             color: var(--antel-white);
             border: none;
             transition: all var(--transition-speed);
         }
         
         .primary-button:hover {
-            background-color: #c90064;
+            background-color: var(--antel-primary-blue-dark);
             transform: translateY(-2px);
-            box-shadow: 0 4px 10px rgba(226, 0, 116, 0.2);
+            box-shadow: 0 4px 10px rgba(107, 145, 188, 0.2);
         }
 
         .secondary-button {
