--- a/public/my_account.html
+++ b/public/my_account.html
@@ -12,8 +12,8 @@
     <style>
         /* AnTel Color Palette & Global Styles */
         :root {
-            --antel-orange: #FF8F00;
-            --antel-pink: #E20074;
+            --antel-primary-blue: #6b91bc;
+            --antel-primary-blue-dark: #58799f;
             --antel-turquoise: #00796B;
             --antel-white: #FAFAFA;
             --antel-text-dark: #333;
@@ -52,7 +52,7 @@
         .logo-placeholder {
             font-weight: 700;
             font-size: 1.8rem;
-            color: var(--antel-orange);
+            color: var(--antel-primary-blue);
             margin-bottom: 2.5rem;
             display: block;
         }
@@ -72,7 +72,7 @@
         .profile-avatar {
             width: 50px;
             height: 50px;
-            background-color: var(--antel-pink);
+            background-color: var(--antel-primary-blue);
             color: var(--antel-white);
             border-radius: 50%;
             display: flex;
@@ -146,13 +146,13 @@
 
         .button-link.active {
             color: var(--antel-white);
-            background-color: var(--antel-pink);
-            box-shadow: 0 4px 10px rgba(226, 0, 116, 0.2);
+            background-color: var(--antel-primary-blue);
+            box-shadow: 0 4px 10px rgba(107, 145, 188, 0.2);
         }
 
         .button-link.active:hover {
             color: var(--antel-white);
-            background-color: var(--antel-pink);
+            background-color: var(--antel-primary-blue-dark);
         }
 
         .dashboard-content {
@@ -216,7 +216,7 @@
         
         .info-card-header .icon {
             font-size: 2rem;
-            color: var(--antel-pink);
+            color: var(--antel-primary-blue);
         }
 
         .info-card-header h3 {
@@ -263,16 +263,16 @@
             font-weight: 600;
             cursor: pointer;
             text-decoration: none;
-            background-color: var(--antel-pink);
+            background-color: var(--antel-primary-blue);
             color: var(--antel-white);
             border: none;
             transition: all var(--transition-speed);
         }
         
         .primary-button:hover {
-            background-color: #c90064;
+            background-color: var(--antel-primary-blue-dark);
             transform: translateY(-2px);
-            box-shadow: 0 4px 10px rgba(226, 0, 116, 0.2);
+            box-shadow: 0 4px 10px rgba(107, 145, 188, 0.2);
         }
     </style>
 </head>
