--- a/public/rewards.html
+++ b/public/rewards.html
@@ -12,8 +12,8 @@
     <style>
         /* AnTel Color Palette & Global Styles */
         :root {
-            --antel-orange: #FF8F00;
-            --antel-pink: #E20074;
+            --antel-primary-blue: #6b91bc;
+            --antel-primary-blue-dark: #58799f;
             --antel-turquoise: #00796B;
             --antel-white: #FAFAFA;
             --antel-text-dark: #333;
@@ -52,7 +52,7 @@
         .logo-placeholder {
             font-weight: 700;
             font-size: 1.8rem;
-            color: var(--antel-orange);
+            color: var(--antel-primary-blue);
             margin-bottom: 2.5rem;
             display: block;
         }
@@ -72,7 +72,7 @@
         .profile-avatar {
             width: 50px;
             height: 50px;
-            background-color: var(--antel-pink);
+            background-color: var(--antel-primary-blue);
             color: var(--antel-white);
             border-radius: 50%;
             display: flex;
@@ -146,13 +146,13 @@
 
         .button-link.active {
             color: var(--antel-white);
-            background-color: var(--antel-pink);
-            box-shadow: 0 4px 10px rgba(226, 0, 116, 0.2);
+            background-color: var(--antel-primary-blue);
+            box-shadow: 0 4px 10px rgba(107, 145, 188, 0.2);
         }
 
         .button-link.active:hover {
             color: var(--antel-white);
-            background-color: var(--antel-pink);
+            background-color: var(--antel-primary-blue-dark);
         }
 
         .dashboard-content {
@@ -205,7 +205,7 @@
 
         .content-card-header .icon {
             font-size: 2rem;
-            color: var(--antel-orange);
+            color: var(--antel-primary-blue);
         }
 
         .content-card-header h3 {
@@ -244,7 +244,7 @@
 
         .reward-header i {
             font-size: 2.5rem;
-            color: var(--antel-pink);
+            color: var(--antel-primary-blue);
             margin-right: 1rem;
         }
 
@@ -266,7 +266,7 @@
             width: 100%;
             padding: 10px 15px;
             margin-top: 1.5rem;
-            background-color: var(--antel-orange);
+            background-color: var(--antel-primary-blue);
             color: var(--antel-white);
             border: none;
             border-radius: 8px;
@@ -278,7 +278,7 @@
         }
 
         .claim-button:hover {
-            background-color: #e57d00;
+            background-color: var(--antel-primary-blue-dark);
             transform: translateY(-2px);
         }
 
