--- a/public/support.html
+++ b/public/support.html
@@ -12,8 +12,8 @@
     <style>
         /* AnTel Color Palette & Global Styles */
         :root {
-            --antel-orange: #FF8F00;
-            --antel-pink: #E20074;
+            --antel-primary-blue: #6b91bc;
+            --antel-primary-blue-dark: #58799f;
             --antel-turquoise: #00796B;
             --antel-white: #FAFAFA;
             --antel-text-dark: #333;
@@ -54,7 +54,7 @@
         .logo-placeholder {
             font-weight: 700;
             font-size: 1.8rem;
-            color: var(--antel-orange);
+            color: var(--antel-primary-blue);
             margin-bottom: 2.5rem;
             display: block;
         }
@@ -74,7 +74,7 @@
         .profile-avatar {
             width: 50px;
             height: 50px;
-            background-color: var(--antel-pink);
+            background-color: var(--antel-primary-blue);
             color: var(--antel-white);
             border-radius: 50%;
             display: flex;
@@ -148,13 +148,13 @@
 
         .button-link.active {
             color: var(--antel-white);
-            background-color: var(--antel-pink);
-            box-shadow: 0 4px 10px rgba(226, 0, 116, 0.2);
+            background-color: var(--antel-primary-blue);
+            box-shadow: 0 4px 10px rgba(107, 145, 188, 0.2);
         }
 
         .button-link.active:hover {
             color: var(--antel-white);
-            background-color: var(--antel-pink);
+            background-color: var(--antel-primary-blue-dark);
         }
 
         .dashboard-content {
@@ -212,7 +212,7 @@
 
         .support-card-header .icon {
             font-size: 2rem;
-            color: var(--antel-turquoise);
+            color: var(--antel-primary-blue);
         }
 
         .support-card-header h3 {
@@ -249,7 +249,7 @@
         
         .support-info i {
             font-size: 1.5rem;
-            color: var(--antel-pink);
+            color: var(--antel-primary-blue);
         }
 
         .support-item-text h4 {
@@ -271,16 +271,16 @@
             font-weight: 600;
             cursor: pointer;
             text-decoration: none;
-            background-color: var(--antel-pink);
+            background-color: var(--antel-primary-blue);
             color: var(--antel-white);
             border: none;
             transition: all var(--transition-speed);
         }
         
         .primary-button:hover {
-            background-color: #c90064;
+            background-color: var(--antel-primary-blue-dark);
             transform: translateY(-2px);
-            box-shadow: 0 4px 10px rgba(226, 0, 116, 0.2);
+            box-shadow: 0 4px 10px rgba(107, 145, 188, 0.2);
         }
 
         .status-badge {
@@ -319,7 +319,7 @@
 
         .contact-details i {
             margin-right: 0.5rem;
-            color: var(--antel-pink);
+            color: var(--antel-primary-blue);
         }
     </style>
 </head>
