--- a/public/signin.html
+++ b/public/signin.html
@@ -7,14 +7,14 @@
     <style>
         /* AnTel Color Palette */
         :root {
-            --antel-orange: #FF8F00;
-            --antel-pink: #E20074;
+            --antel-primary-blue: #6b91bc;
+            --antel-primary-blue-dark: #58799f;
             --antel-turquoise: #00796B;
             --antel-white: #FAFAFA;
             --antel-text-dark: #333;
             --antel-light-gray: #f5f5f5;
             --antel-dark-blue: #2c3e50;
-            --antel-light-orange: #ffe0b2;
+            --antel-light-blue: #e6eef7;
             --antel-gray: #666;
             --antel-light-border: #ddd;
             --antel-faint-gray: #ccc;
@@ -49,7 +49,7 @@
         /* Image Section */
         .signin-image-section {
             flex: 1;
-            background-image: linear-gradient(to right bottom, var(--antel-orange), var(--antel-pink));
+            background-image: linear-gradient(to right bottom, var(--antel-primary-blue), var(--antel-primary-blue-dark));
             color: var(--antel-white);
             padding: 3rem;
             display: flex;
@@ -128,7 +128,7 @@
         }
         
         .toggle-form-link a {
-            color: var(--antel-turquoise);
+            color: var(--antel-primary-blue);
             text-decoration: none;
             font-weight: 600;
         }
@@ -140,7 +140,7 @@
         .button {
             width: 100%;
             padding: 15px;
-            background-color: var(--antel-orange);
+            background-color: var(--antel-primary-blue);
             color: #fff;
             border: none;
             border-radius: 8px;
@@ -151,7 +151,7 @@
         }
 
         .button:hover {
-            background-color: #e67e00; /* Darker shade of orange on hover */
+            background-color: var(--antel-primary-blue-dark);
         }
 
         .error-message {
