--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <style>
         /* General Styles & Color Palette */
         :root {
-            --antel-primary-blue: #6b91bc;
+            --antel-primary-blue: #004687;
             --antel-primary-blue-dark: #58799f;
             --antel-turquoise: #00796B;
             --antel-white: #FAFAFA;
