--- a/public/my_devices.html
+++ b/public/my_devices.html
@@ -12,7 +12,7 @@
     <style>
         /* AnTel Color Palette & Global Styles */
         :root {
-            --antel-primary-blue: #6b91bc;
+            --antel-primary-blue: #004687;
             --antel-primary-blue-dark: #58799f;
             --antel-white: #FAFAFA;
             --antel-text-dark: #333;
