--- a/public/signin.html
+++ b/public/signin.html
@@ -7,7 +7,7 @@
     <style>
         /* AnTel Color Palette */
         :root {
-            --antel-primary-blue: #6b91bc;
+            --antel-primary-blue: #004687;
             --antel-primary-blue-dark: #58799f;
             --antel-turquoise: #00796B;
             --antel-white: #FAFAFA;
