Updated frontend: Antel to Angola changes

--- a/public/bill_payments.html
+++ b/public/bill_payments.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bill Payments - AnTel</title>
+    <title>Bill Payments - Angola Telecom</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <style>
-        /* AnTel Color Palette & Global Styles */
+        /* Angola Telecom Color Palette & Global Styles */
         :root {
             --antel-primary-blue: #004687;
             --antel-primary-blue-dark: #58799f;
@@ -313,7 +313,7 @@
 <body>
     <div class="dashboard-container">
         <aside class="dashboard-sidebar">
-            <div class="logo-placeholder">AnTel</div>
+            <div class="logo-placeholder">Angola Telecom</div>
             <div class="user-profile-summary">
                 <div class="profile-info-block">
                     <div class="profile-avatar">P</div>
@@ -372,7 +372,7 @@
 
                 <div class="bill-card">
                     <div class="bill-card-header">
-                        <h3>Broadband Bill (AnTel Fiber)</h3>
+                        <h3>Broadband Bill (Angola Telecom Fiber)</h3>
                         <span class="status-badge paid">Paid</span>
                     </div>
                     
