--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AnTel - Manage Your Mobile Services</title>
+    <title>Angola Telecom - Manage Your Mobile Services</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -463,7 +463,7 @@
 <body>
     <header class="vi-header">
         <div class="container">
-            <a href="#" class="logo-text">AnTel</a>
+            <a href="#" class="logo-text">Angola Telecom</a>
             <nav class="main-nav">
                 <ul>
                     <li><a href="#">Prepaid</a></li>
@@ -486,7 +486,7 @@
         <section class="hero-section">
             <div class="container hero-content">
                 <div class="hero-left">
-                    <h1>There's always more with AnTel 🚀</h1>
+                    <h1>There's always more with Angola Telecom 🚀</h1>
                 </div>
             </div>
         </section>
@@ -494,7 +494,7 @@
         <section class="ad-banner">
             <div class="container">
                 <div class="card">
-                    <img src="images/advertisement.png" alt="AnTel Advertisement" />
+                    <img src="images/advertisement.png" alt="Angola Telecom Advertisement" />
                 </div>
             </div>
         </section>
@@ -509,7 +509,7 @@
                     </div>
                     <div class="quick-link-icons">
                         <a href="#"><i class="fas fa-mobile-alt"></i>Get New SIM</a>
-                        <a href="#"><i class="fas fa-sync-alt"></i>Port to AnTel</a>
+                        <a href="#"><i class="fas fa-sync-alt"></i>Port to Angola Telecom</a>
                         <a href="#"><i class="fas fa-id-card"></i>E-KYC</a>
                     </div>
                 </div>
@@ -530,7 +530,7 @@
                         </div>
                         <div class="plan-details">
                             <p class="plan-highlight">Unlimited 5G</p>
-                            <h3>AnTel Max 451</h3>
+                            <h3>Angola Telecom Max 451</h3>
                             <p class="price">₹451<span class="price-suffix">/month</span></p>
                             <ul class="plan-features">
                                 <li><i class="fas fa-phone-alt"></i> Unlimited Calls</li>
@@ -546,7 +546,7 @@
                         </div>
                         <div class="plan-details">
                             <p class="plan-highlight">Unlimited 5G</p>
-                            <h3>AnTel Max 551</h3>
+                            <h3>Angola Telecom Max 551</h3>
                             <p class="price">₹551<span class="price-suffix">/month</span></p>
                             <ul class="plan-features">
                                 <li><i class="fas fa-phone-alt"></i> Unlimited Calls</li>
@@ -562,7 +562,7 @@
                         </div>
                         <div class="plan-details">
                             <p class="plan-highlight">Unlimited 5G</p>
-                            <h3>AnTel Max 751</h3>
+                            <h3>Angola Telecom Max 751</h3>
                             <p class="price">₹751<span class="price-suffix">/month</span></p>
                             <ul class="plan-features">
                                 <li><i class="fas fa-phone-alt"></i> Unlimited Calls</li>
@@ -640,7 +640,7 @@
                     <div class="benefit-card">
                         <i class="fas fa-film"></i>
                         <h3>Movies & TV</h3>
-                        <p>Access to AnTel Movies & TV library.</p>
+                        <p>Access to Angola Telecom Movies & TV library.</p>
                     </div>
                     <div class="benefit-card">
                         <i class="fas fa-gamepad"></i>
@@ -656,19 +656,19 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="#" class="logo-text">AnTel</a>
+                    <a href="#" class="logo-text">Angola Telecom</a>
                     <p class="company-desc">Vodafone Idea Limited, a partnership between the Aditya Birla Group & Vodafone Group, provides pan-India voice and data services using the latest communication technologies</p>
                 </div>
                 <div class="footer-col">
-                    <h4>about AnTel</h4>
+                    <h4>about Angola Telecom</h4>
                     <ul>
                         <li><a href="#">About Us</a></li>
-                        <li><a href="#">AnTel Idea Corp</a></li>
+                        <li><a href="#">Angola Telecom Idea Corp</a></li>
                         <li><a href="#">Foundation</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>more from AnTel</h4>
+                    <h4>more from Angola Telecom</h4>
                     <ul>
                         <li><a href="#">Postpaid</a></li>
                         <li><a href="#">Connection</a></li>
@@ -676,11 +676,11 @@
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>explore on AnTel app</h4>
+                    <h4>explore on Angola Telecom app</h4>
                     <ul>
-                        <li><a href="#">AnTel Games</a></li>
-                        <li><a href="#">AnTel Movies & TV</a></li>
-                        <li><a href="#">AnTel Hero Unlimited</a></li>
+                        <li><a href="#">Angola Telecom Games</a></li>
+                        <li><a href="#">Angola Telecom Movies & TV</a></li>
+                        <li><a href="#">Angola Telecom Hero Unlimited</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
@@ -693,7 +693,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 AnTel. All rights reserved.</p>
+                <p>&copy; 2025 Angola Telecom. All rights reserved.</p>
             </div>
         </div>
     </footer>
