--- a/public/signin.html
+++ b/public/signin.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AnTel - Sign In</title>
+    <title>Angola Telecom - Sign In</title>
     <style>
-        /* AnTel Color Palette */
+        /* Angola Telecom Color Palette */
         :root {
             --antel-primary-blue: #004687;
             --antel-primary-blue-dark: #58799f;
@@ -218,16 +218,16 @@
     <div class="signin-page-wrapper">
         <div class="signin-content">
             <div class="signin-image-section">
-                <div class="logo"><div class="logo-placeholder">AnTel</div></div>
+                <div class="logo"><div class="logo-placeholder">Angola Telecom</div></div>
                 <h1>One place to manage all your plans and payments</h1>
-                <p>Seamlessly manage your AnTel mobile and broadband services.</p>
+                <p>Seamlessly manage your Angola Telecom mobile and broadband services.</p>
             </div>
             <div class="signin-form-section">
-                <h2 id="formTitle">Sign In to AnTel</h2>
+                <h2 id="formTitle">Sign In to Angola Telecom</h2>
                 
                 <form class="auth-form" id="loginForm">
                     <div class="form-group">
-                        <label for="mobileNumber">AnTel mobile number</label>
+                        <label for="mobileNumber">Angola Telecom mobile number</label>
                         <input type="text" id="mobileNumber" name="mobileNumber" placeholder="Enter your mobile number" required>
                     </div>
                     <div class="form-group">
@@ -248,7 +248,7 @@
                         <input type="text" id="signupName" name="signupName" placeholder="Enter your full name" required>
                     </div>
                     <div class="form-group">
-                        <label for="signupMobileNumber">AnTel mobile number</label>
+                        <label for="signupMobileNumber">Angola Telecom mobile number</label>
                         <input type="text" id="signupMobileNumber" name="signupMobileNumber" placeholder="Enter your mobile number" required>
                     </div>
                     <div class="form-group">
@@ -269,7 +269,7 @@
                     <div class="qr-code-placeholder button-link">
                         Scan for App <br> (QR Code)
                     </div>
-                    <p>download AnTel app now</p>
+                    <p>download Angola Telecom app now</p>
                     <p>Scan the QR code with your mobile to download the app.</p>
                 </div>
             </div>
