--- a/public/my_account.html
+++ b/public/my_account.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Account - AnTel</title>
+    <title>My Account - Angola Telecom</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <style>
-        /* AnTel Color Palette & Global Styles */
+        /* Angola Telecom Color Palette & Global Styles */
         :root {
             --antel-primary-blue: #004687;
             --antel-primary-blue-dark: #58799f;
@@ -279,7 +279,7 @@
 <body>
     <div class="dashboard-container">
         <aside class="dashboard-sidebar">
-            <div class="logo-placeholder">AnTel</div>
+            <div class="logo-placeholder">Angola Telecom</div>
             <div class="user-profile-summary">
                 <div class="profile-info-block">
                     <div class="profile-avatar">P</div>
