--- a/public/rewards.html
+++ b/public/rewards.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rewards - AnTel</title>
+    <title>Rewards - Angola Telecom</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <style>
-        /* AnTel Color Palette & Global Styles */
+        /* Angola Telecom Color Palette & Global Styles */
         :root {
             --antel-primary-blue: #004687;
             --antel-primary-blue-dark: #58799f;
@@ -301,7 +301,7 @@
 <body>
     <div class="dashboard-container">
         <aside class="dashboard-sidebar">
-            <div class="logo-placeholder">AnTel</div>
+            <div class="logo-placeholder">Angola Telecom</div>
             <div class="user-profile-summary">
                 <div class="profile-info-block">
                     <div class="profile-avatar">P</div>
@@ -379,7 +379,7 @@
                         </div>
                         <div id="noRewardsMessage" style="display:none;">
                             <p>You have no active rewards at the moment.</p>
-                            <p>Keep using AnTel services to unlock new exciting offers!</p>
+                            <p>Keep using Angola Telecom services to unlock new exciting offers!</p>
                         </div>
                     </div>
                 </div>
