Fixed scripts: updated and corrected functionality

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -959,76 +959,6 @@
         </main>
     </div>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const slides = document.querySelector('.carousel-slides');
-            const slideImages = document.querySelectorAll('.carousel-slide');
-            const prevButton = document.querySelector('.carousel-button.prev');
-            const nextButton = document.querySelector('.carousel-button.next');
-            const indicatorsContainer = document.querySelector('.carousel-indicators');
-            let currentIndex = 0;
-            const totalSlides = slideImages.length;
-            let autoSlideInterval;
-
-            // Create indicators
-            for (let i = 0; i < totalSlides; i++) {
-                const dot = document.createElement('div');
-                dot.classList.add('indicator-dot');
-                dot.dataset.index = i;
-                if (i === 0) dot.classList.add('active');
-                indicatorsContainer.appendChild(dot);
-            }
-            const indicatorDots = document.querySelectorAll('.indicator-dot');
-
-            function updateCarousel() {
-                slides.style.transform = `translateX(-${currentIndex * 100}%)`;
-                indicatorDots.forEach((dot, index) => {
-                    dot.classList.toggle('active', index === currentIndex);
-                });
-            }
-
-            function goToSlide(index) {
-                currentIndex = index;
-                updateCarousel();
-                resetAutoSlide();
-            }
-
-            function showNextSlide() {
-                currentIndex = (currentIndex + 1) % totalSlides;
-                updateCarousel();
-            }
-
-            function showPrevSlide() {
-                currentIndex = (currentIndex - 1 + totalSlides) % totalSlides;
-                updateCarousel();
-            }
-
-            function startAutoSlide() {
-                autoSlideInterval = setInterval(showNextSlide, 5000);
-            }
-
-            function resetAutoSlide() {
-                clearInterval(autoSlideInterval);
-                startAutoSlide();
-            }
-
-            prevButton.addEventListener('click', showPrevSlide);
-            nextButton.addEventListener('click', showNextSlide);
-
-            indicatorsContainer.addEventListener('click', (e) => {
-                if (e.target.classList.contains('indicator-dot')) {
-                    const index = parseInt(e.target.dataset.index);
-                    goToSlide(index);
-                }
-            });
-
-            const carouselContainer = document.querySelector('.carousel-container');
-            carouselContainer.addEventListener('mouseenter', () => clearInterval(autoSlideInterval));
-            carouselContainer.addEventListener('mouseleave', startAutoSlide);
-
-            updateCarousel();
-            startAutoSlide();
-        });
-    </script>
+   <script src="./js/app.js"></script>
 </body>
 </html>
